# toyrender

./: CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
